# FaceRecognitionCPP

./: .gitignore  CMakeLists.txt  CMakeLists_Linux.txt  README.md
DataCleaner/: DatasetCleaner.py
Project/: export_model.cpp  image_comparison.cpp  main.cpp
Project/include/dataset/: TripletDataset.h
Project/include/model/: ArcFace.h  Body.h  HardMining.h  Head.h  Model.h  ResBlock.h  TripletLoss.h  backbone.h  projector.h
Project/src/model/: HardMining.cpp  Head.cpp  Model.cpp  ResBlock.cpp  TripletLoss.cpp  backbone.cpp  projector.cpp
Trainer/: main.cpp
Trainer/include/Dataset/: BalancedSampler.h  Dataset.h
Trainer/include/Loss/: ArcFace.h  LossMetrics.h  TripletLoss.h
Trainer/include/Model/: Bottleneck.h  FaceNet.h  Model.h  backbone.h  head.h  projector.h
Trainer/include/Utils/: AccuracyLFW.h  HardMining.h
Trainer/src/Dataset/: Dataset.cpp  TripletDataset.cpp
Trainer/src/Loss/: ArcFace.cpp  TripletLoss.cpp
Trainer/src/Model/: Bottleneck.cpp  FaceNet.cpp  Model.cpp  ResBlock.cpp  backbone.cpp  head.cpp  projector.cpp
Trainer/src/Utils/: AccuracyLFW.cpp  HardMining.cpp
app/: AccuracyTestLFW.py  app.py  model_pytorch.py
appCPP/: main.cpp
appPY/: app.py
runs/: test_1.txt
tests/: test_model.cpp
utils/DataCleaner/: casia_to_image.py
utils/ModelExporter/: export_model.cpp
utils/ModelLoader/: model_pytorch.py
utils/TestCodes/: AccuracyTestLFW.py  image_comparison.cpp  test_model.cpp
